--- a/src/components/98-adjustments/_contacts.scss
+++ b/src/components/98-adjustments/_contacts.scss
@@ -65,7 +65,7 @@ $icon-size:50px;
       margin-bottom: 10px;
     }
 
-    .social-nedia__container {
+    .social-media__container {
 
       >div {
 
