--- a/src/components/04-base/_buttons.scss
+++ b/src/components/04-base/_buttons.scss
@@ -18,6 +18,7 @@
   letter-spacing: .5px;
   line-height: 20px;
   min-height: 50px;
+  width: 100%;
 
   .bottom & {
     border-radius: 24px;
@@ -27,13 +28,23 @@
     font-family: $arabic-bold;
   }
 
+  &.btn-logout,
+  &.reschedule-cancel,
+  &.btn-second {
+    background-color: $sapphire-white;
+  }
+
+  &.btn-second {
+    color: $regular-alpha;
+  }
+
   &.btn-blue {
     background-color: $dark-blue;
   }
 
   &.btn-logout,
   &.reschedule-cancel {
-    background-color: $sapphire-white;
+
     border-color: $regular-red;
     color: $regular-red;
   }
