--- a/src/components/05-components/SapphireCare_Patterns/filter/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/filter/_index.scss
@@ -48,6 +48,10 @@
         max-height: 66vh;
         overflow-y: auto;
         padding: 20px 0;
+
+        .small-card {
+          border: none;
+        }
       }
 
       &-cancel {
