--- a/src/components/01-tools/_information-section.scss
+++ b/src/components/01-tools/_information-section.scss
@@ -4,6 +4,7 @@
 %information-section {
   [id*='Information'] {
     .section {
+      height: 100%;
       min-height: -webkit-fill-available;
       padding-bottom: 30px;
       padding-top: 35px;
