--- a/src/components/98-adjustments/_exam-detail.scss
+++ b/src/components/98-adjustments/_exam-detail.scss
@@ -108,11 +108,10 @@
 
   }
 
-  [id*='SearchContainer'],
   [id*='ExamResults'] {
     .section {
       background-color: $sapphire-white;
-      height: 100vh;
+      height: 100%;
       ;
     }
   }
