--- a/src/components/01-tools/_information-section.scss
+++ b/src/components/01-tools/_information-section.scss
@@ -5,6 +5,7 @@
   [id*='Information'] {
     .section {
       height: 100%;
+      min-height: 500px;
       min-height: -webkit-fill-available;
       padding-bottom: 30px;
       padding-top: 35px;
