--- a/src/components/02-generic/_reset.scss
+++ b/src/components/02-generic/_reset.scss
@@ -3,7 +3,7 @@
 
 body,
 .content {
-  background: transparent;
+  background: $sapphire-white;
   color: $dark-grey;
   font-family: $latin-regular;
   font-size: 14px !important;
