--- a/src/components/05-components/Common/layout/_header.scss
+++ b/src/components/05-components/Common/layout/_header.scss
@@ -22,10 +22,17 @@
   &.detail {
     .header {
       background-color: transparent;
-      height: 100px;
+      height: auto;
 
       .header-title {
         font-size: $font-size-heading3;
+      }
+
+      .header-content {
+        .section {
+          padding-left: 0;
+          padding-right: 0;
+        }
       }
     }
 
@@ -39,7 +46,7 @@
   color: inherit;
   display: flex;
   flex-direction: column;
-  height: 120px;
+  //height: 120px;
   justify-content: center;
 
   a,
@@ -55,7 +62,7 @@
 }
 
 .header-top {
-  height: 60px;
+  height: 100px;
   padding: 0;
 }
 
