--- a/src/components/98-adjustments/_doctor-detail.scss
+++ b/src/components/98-adjustments/_doctor-detail.scss
@@ -6,16 +6,11 @@
 
 
 
-  [id*='DoctorHeader'] {
-
-    .section {
-      margin-bottom: 70px;
-    }
-  }
+  [id*='DoctorHeader'] {}
 
   [id*='AppointmentRequest'] {
+    bottom: -25px;
     position: relative;
-    top: -25px;
 
     .btn {
       align-items: center;
@@ -30,7 +25,7 @@
 
     .section {
       background-color: $sapphire-white;
-      height: 100%;
+      padding-top: 50px;
     }
 
     .bio {
