--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -29,6 +29,10 @@ $marginContainers: 15px;
 }
 
 [id*='HomePage'] {
+  .content {
+    background-color: transparent;
+  }
+
   .header-title {
     align-items: flex-end;
     display: flex;
@@ -66,6 +70,11 @@ $marginContainers: 15px;
   [id*='AppoitmentsSection'] {
     .section {
       padding-bottom: 30px;
+      padding-right: 0;
+
+      .is-rtl & {
+        padding-left: 0;
+      }
     }
 
     .section-title {
