--- a/src/components/05-components/Common/layout/_header.scss
+++ b/src/components/05-components/Common/layout/_header.scss
@@ -14,9 +14,12 @@
       }
     }
 
-    .content {
+    .content,
+    .list {
       background-color: transparent;
     }
+
+
 
     .list-item {
       padding: 15px 0;
