social icon adjust

--- a/src/components/98-adjustments/_contacts.scss
+++ b/src/components/98-adjustments/_contacts.scss
@@ -78,8 +78,7 @@ $icon-size:50px;
           border: 2px solid $regular-alpha;
           border-radius: 50%;
           color: $regular-alpha;
-          display: flex;
-          float: inline-start;
+          display: inline-flex;
           height: $icon-size;
           justify-content: center;
           width: $icon-size;
