Header Back arrow

--- a/src/components/05-components/Common/layout/_header.scss
+++ b/src/components/05-components/Common/layout/_header.scss
@@ -66,6 +66,16 @@
 
 
   }
+
+  .app-menu-icon {
+    &.back {
+      .is-rtl & {
+        transform: rotate(180deg);
+      }
+    }
+  }
+
+
 }
 
 .header-top {
