--- a/src/components/05-components/SapphireCare_Patterns/card-top-title-with-background/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-top-title-with-background/_index.scss
@@ -1,25 +1,33 @@
 /* CardTopTitleWithBackground */
 @use '~Settings/colors'as *;
+@use '~Settings/fonts'as *;
 
-.card-top-title-wrapper {
+
+
+.card-top-title-background {
   background: $sapphire-white;
   border-radius: 4px;
-  -webkit-box-shadow: 0 2px 5px 0 rgba(209, 209, 209, 0.5);
-  box-shadow: 0 2px 5px 0 rgba(209, 209, 209, 0.5);
-}
+  -webkit-box-shadow: 0 2px 5px 0 rgba(214, 214, 214, 0.5);
+  box-shadow: 0 2px 5px 0 rgba(214, 214, 214, 0.5);
+  overflow: hidden;
 
-.card-top-title-wrapper-title {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  padding: 10px 0;
-  text-align: center;
-}
+  &__title {
+    background-color: $regular-red;
+    color: $sapphire-white;
+    font-family: $latin-bold;
+    font-size: $font-size-heading4;
+    padding: 10px 0;
+    text-align: center;
+  }
 
-.card-top-title-wrapper-text {
-  padding: 15px 20px 10px;
-}
+  &__text {
+    padding: 15px 20px 10px;
+  }
 
-.card-top-title-wrapper-action {
-  padding: 20px 15px;
-  text-align: right;
+  &__action {
+    color: $regular-grey;
+    padding: 20px 15px;
+    text-align: right;
+  }
+
 }
