--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -36,7 +36,8 @@ $marginContainers: 15px;
   .header-title {
     align-items: flex-end;
     display: flex;
-    height: 100%
+    height: 100%;
+    padding-bottom: 10px;
   }
 
   .header-right {
@@ -58,7 +59,6 @@ $marginContainers: 15px;
       direction: rtl;
     }
   }
-
 
 
   [id*='SaluteSection'] {
