Skeleton state creation

--- a/src/components/01-tools/_index.scss
+++ b/src/components/01-tools/_index.scss
@@ -2,4 +2,5 @@
 @forward 'background-gradient';
 @forward 'card-profile-image';
 @forward 'information-section';
+@forward 'loading-skeleton';
 @forward 'remaining-days';
