Iphone color adjust

--- a/src/components/05-components/SapphireCare_Patterns/card-icon-text-link/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-icon-text-link/_index.scss
@@ -18,6 +18,7 @@ $width: 105px;
     color: $regular-alpha;
     display: contents;
     font-size: 50px;
+    -webkit-text-fill-color: $regular-alpha;
   }
 
   &__text {
