--- a/src/components/01-tools/_loading-skeleton.scss
+++ b/src/components/01-tools/_loading-skeleton.scss
@@ -6,7 +6,7 @@
   }
 }
 
-.loading {
+.is-loading {
   background-color: $mid-light-grey !important;
   border: none;
   color: transparent;
@@ -32,7 +32,7 @@
     width: 100%;
   }
 
-  +.loading {
+  +.is-loading {
     background-color: $light-grey;
   }
 
