select arrow color adjust

--- a/src/components/04-base/_select.scss
+++ b/src/components/04-base/_select.scss
@@ -22,7 +22,7 @@ select.dropdown-display {
 }
 
 .select-dropdown:after {
-  border: 1px solid $regular-blue;
+  border: 1px solid $regular-alpha;
   border-right: 0;
   border-top: 0;
   content: " ";
