--- a/src/components/05-components/SapphireCare_Patterns/form-input/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/form-input/_index.scss
@@ -45,6 +45,16 @@
 
 
 .animated-label {
+
+  &.is-select {
+    .animated-label-text {
+      color: $regular-grey;
+      font-size: $font-size-normal;
+      position: relative;
+      top: 10px;
+    }
+  }
+
   .animated-label-text {
     bottom: -25px;
     font-size: $font-size-heading3;
@@ -52,6 +62,8 @@
     transition: font-size .5s ease;
 
   }
+
+
 
   &.active {
 
