--- a/src/components/05-components/SapphireCare_Patterns/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/_index.scss
@@ -27,6 +27,7 @@
 @forward 'icon-plus';
 @forward 'image-background';
 @forward 'list-card/';
+@forward 'new_filter';
 @forward 'no-appointments-card/';
 @forward 'period';
 @forward 'salute';
