--- a/src/components/05-components/SapphireCare_Patterns/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/_index.scss
@@ -31,6 +31,7 @@
 @forward 'no-appointments-card/';
 @forward 'period';
 @forward 'salute';
+@forward 'same-day';
 @forward 'select-profile';
 @forward 'small-card';
 @forward 'user-card-with-bottom-actions';
