--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -37,7 +37,14 @@ $marginContainers: 15px;
     align-items: flex-end;
     display: flex;
     height: 100%;
+    justify-content: center;
     padding-bottom: 10px;
+
+    .is-loading {
+      >img {
+        visibility: hidden;
+      }
+    }
   }
 
   .header-right {
