--- a/src/components/05-components/SapphireCare_Patterns/appointment-card/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/appointment-card/_index.scss
@@ -226,7 +226,11 @@
   }
 
   &__timeto {
-    @include remainDays
+    @include remainDays;
+
+    .is-loading & {
+      display: none;
+    }
   }
 
   &__photo-container+&__timeto {
