skeleton loading color

--- a/src/components/01-tools/_loading-skeleton.scss
+++ b/src/components/01-tools/_loading-skeleton.scss
@@ -7,7 +7,7 @@
 }
 
 .is-loading {
-  background-color: $mid-light-grey !important;
+  background-color: $light-grey;
   background-image: unset;
   border: none;
   color: transparent;
@@ -18,7 +18,7 @@
 
   &::after {
     animation: loading 1.5s infinite;
-    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .2), transparent);
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
     content: '';
     display: block;
     height: 100%;
